    to use the GUI to automate any use case supported by youtube-dl.
 - The GUI offers an ability to download single media or multiple medias in batches.
 - Works on Linux and Windows.

Version 1.1.0(March 1st, 2021)
[All]
 - Add polish translations.

[Linux]
 - Add support for downloading media using wget in addition to youtube-dl.

[Windows]
 - Add ability to automatically download youtube-dl binary on first run and a button
    in the configuration tab to update it on demand.
 - The "Cancel" button now works as expected.

Version 1.2.0(April 1st, 2021)
[All]
 - Add json based plugin system to make it possible for users to use their preffered
   backends to download media.

[Windows]
 - Bundle ffmpeg.

 Version 1.3.0(May 1st, 2021)
 [All]
 - Add simplified chinese translations.
 - Add Spanish translations.
 - Add an option to do batch downloads concurrently.
 [Windows]
 - Add a portable version(A self contained version that keeps everything in the application folder).
 [Linux]
 - Add an option to prefer system executables over private media downloader executables.

  Version 1.4.0(June 1st, 2021)
 [All]
- Add dark themes support.
- Add Turkish translations.
- Update translations.
- Make each tab control its own default engine.
- Add a tab in a configure tab that allow changing of default downloading options for each engine.
- Add a library tab that allows management of downloaded media from within the app.
- Make it possible to launch a media by double clicking its entry in the batch tab,playlist tab and library tab.
- Add support for gallery-dl extension(https://github.com/mikf/gallery-dl).
 [Windows]
- Update bundled OpenSSL to version 1.1.1j.

  Version 1.5.0(Unreleased)
  [All]
- Show thumbnails in the playlist downloader tab and in the batch downloader tab. An option has to be set in the
  configure tab to enable thumbnails to show up in the batch downloader tab becuse  fetching thumbnails
  is a slow process.